--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
 	"tabWidth": 4,
 	"bracketSpacing": true,
 	"semi": false,
-	"singleQuote": true
+	"singleQuote": true,
+	"trailingComma": "none",
+	"arrowParens": "avoid"
 }
